<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		tools:context=".BaseActivity"
		style="@style/layout_style"
>
		<RelativeLayout
				style="@style/element_style"
				android:layout_width="160sp"
				android:layout_height="160sp"
				xmlns:android="http://schemas.android.com/apk/res/android"
				android:background="@color/halogen"
		>
				<TextView
						style="@style/element_symbol"
						android:id="@+id/base_symbol_view1"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/logo_el"
						android:textColor="@color/black" />
				<TextView
						android:id="@+id/base_name_view"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_below="@+id/base_symbol_view1"
						android:layout_centerHorizontal="true"
						android:text="@string/app_name"
						android:textColor="@color/black" />
		</RelativeLayout>
		<Button
				android:id="@+id/show_elem_btn"
				android:layout_width="wrap_content"
				android:layout_height="48dp"
				android:layout_gravity="center_horizontal"
				android:text="@string/show_elem_desc"
				android:onClick="onClick"
				android:layout_weight="1" />
		<Button
				android:id="@+id/show_about_btn"
				android:layout_width="wrap_content"
				android:layout_height="48dp"
				android:layout_gravity="center_horizontal"
				android:text="@string/show_about_desc"
				android:onClick="onClick"
				android:layout_weight="1" />
</LinearLayout>